--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-gesture-handler": "^2.26.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "expo-dev-client": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
