--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
     "android": {
       "icon": "./assets/icon.png",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#667eea"
       },
       "edgeToEdgeEnabled": true,
